Regression: ASSERT(!m_adoptionIsRequired) under Node::ref() on iOS Debug https://bugs.webkit.org/show_bug.cgi?id=262764

Reviewed by Ryosuke Niwa.

With smart pointer adoption, it is really easy to ref a Node while it is
still being constructed. This is not harmful but this hits the
adoptionRequirement assertion in Node::ref().

To address the issue, I am relaxing the adoption requirement for Document
Nodes. We may want to extend this to more Node types in the future but
this is enough to address this particular crash.

* Source/WebCore/dom/Node.cpp:
(WebCore::Node::Node):
* Source/WebCore/dom/Node.h:
(WebCore::Node::relaxAdoptionRequirement):

Canonical link: https://commits.webkit.org/268983@main